--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ sentence-transformers = "^3.1.1"
 wikipedia-api = "^0.7.1"
 tantivy = "^0.22.0"
 duckdb = "^1.1.1"
+pandas = "^2.2.3"
+openai = "^1.50.1"
+python-dotenv = "^1.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
