--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ duckdb = "^1.1.1"
 pandas = "^2.2.3"
 openai = "^1.50.1"
 python-dotenv = "^1.0.1"
+jupyter = "^1.1.1"
+ipywidgets = "^8.1.5"
+widgetsnbextension = "^4.0.13"
 
 
 [tool.poetry.group.dev.dependencies]
