--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ python-dotenv = "^1.0.1"
 jupyter = "^1.1.1"
 ipywidgets = "^8.1.5"
 widgetsnbextension = "^4.0.13"
+docx2txt = "^0.8"
+datasets = "^3.0.1"
+nltk = "^3.9.1"
 
 
 [tool.poetry.group.dev.dependencies]
