--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ widgetsnbextension = "^4.0.13"
 docx2txt = "^0.8"
 datasets = "^3.0.1"
 nltk = "^3.9.1"
+inspect-ai = "^0.3.33"
 
 
 [tool.poetry.group.dev.dependencies]
