--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ docx2txt = "^0.8"
 datasets = "^3.0.1"
 nltk = "^3.9.1"
 inspect-ai = "^0.3.33"
-dspy-ai = "^2.5.3"
+dspy-ai = "2.5.3"
 
 
 [tool.poetry.group.dev.dependencies]
