--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = ">=3.12,<3.13"
 lancedb = "^0.13.0"
 sentence-transformers = "^3.1.1"
 wikipedia-api = "^0.7.1"
@@ -24,7 +24,9 @@ datasets = "^3.0.1"
 nltk = "^3.9.1"
 inspect-ai = "^0.3.33"
 dspy-ai = "2.5.3"
-
+# ragas = "0.1.21"
+unstructured = "^0.15.13"
+cffi = "^1.17.1"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
